add new component

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -34,50 +34,6 @@ ol {
   height: 65px;
 }
 
-.text-box {
-  color: white;
-  position: absolute;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
-
-.text-box h1 {
-  font-size: 40px;
-  font-weight: 700;
-  text-transform: uppercase;
-  letter-spacing: 5px;
-  margin-bottom: 20px;
-  display: flex;
-  justify-content: center;
-  opacity: 0;
-  animation: reveal2 1s forwards 0.5s;
-}
-
-.text-box span {
-  display: flex;
-  justify-content: center;
-  opacity: 0;
-  animation: reveal 1s forwards 0.5s;
-}
-
-@keyframes reveal {
-  from {
-    translate: 0 100%;
-  }
-  to {
-    translate: none;
-    opacity: 1;
-  }
-}
-@keyframes reveal2 {
-  from {
-    translate: 0 100%;
-  }
-  to {
-    translate: none;
-    opacity: 1;
-  }
-}
 @media (max-width: 700px) {
   .logo {
     width: 50px;
@@ -91,30 +47,6 @@ ol {
     height: 100vh;
     width: 100%;
     position: relative;
-  }
-  .text-box {
-    color: white;
-    position: absolute;
-    top: 70%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    font-size: 50px;
-  }
-  .text-box h1 {
-    font-size: 40px;
-    font-weight: 700;
-    text-transform: uppercase;
-    letter-spacing: 5px;
-    margin-bottom: 20px;
-    display: flex;
-    justify-content: center;
-  }
-  .text-box span {
-    display: flex;
-    justify-content: center;
-    opacity: 0;
-    animation: reveal 1s forwards 0.5s;
-    font-size: 15px;
   }
 }
 @font-face {
@@ -524,6 +456,77 @@ a {
 .menu-link {
   color: #fff;
   text-decoration: none;
+}
+
+.text-box {
+  color: white;
+  position: absolute;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.text-box h1 {
+  font-size: 40px;
+  font-weight: 700;
+  text-transform: uppercase;
+  letter-spacing: 5px;
+  margin-bottom: 20px;
+  display: flex;
+  justify-content: center;
+  opacity: 0;
+  animation: reveal2 1s forwards 0.5s;
+}
+
+.text-box span {
+  display: flex;
+  justify-content: center;
+  opacity: 0;
+  animation: reveal 1s forwards 0.5s;
+}
+
+@keyframes reveal {
+  from {
+    translate: 0 100%;
+  }
+  to {
+    translate: none;
+    opacity: 1;
+  }
+}
+@keyframes reveal2 {
+  from {
+    translate: 0 100%;
+  }
+  to {
+    translate: none;
+    opacity: 1;
+  }
+}
+@media (max-width: 700px) {
+  .text-box {
+    color: white;
+    position: absolute;
+    top: 70%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 50px;
+  }
+  .text-box h1 {
+    font-size: 40px;
+    font-weight: 700;
+    text-transform: uppercase;
+    letter-spacing: 5px;
+    margin-bottom: 20px;
+    display: flex;
+    justify-content: center;
+  }
+  .text-box span {
+    display: flex;
+    justify-content: center;
+    opacity: 0;
+    animation: reveal 1s forwards 0.5s;
+    font-size: 15px;
+  }
 }
 
 /*# sourceMappingURL=main.css.map */
