--- a/assets/sass/layout/_footer.scss
+++ b/assets/sass/layout/_footer.scss
@@ -2,10 +2,14 @@
     position: absolute;
     bottom: 0;
     width: 100%;
-    background-color: #333;
-    color: #fff;
-    text-align: center;
-    padding: 10px 0;
+    height: 350px;
+    background-color: #A6A6A6;
+    color: #000000;
+    padding-left: 145px;
+    padding-right: 145px;
+    padding-top: 71px;
+    box-sizing: border-box;
+
 }
 
 .footer-menu {
@@ -22,4 +26,56 @@
 .footer-menu a {
     color: #333;
     text-decoration: none;
+}
+
+
+.footer-contact {
+    display: flex;
+    padding-left: 25px;
+    font-size: 24px;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+
+}
+
+.contact-buttons {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: flex-start;
+    margin-top: 50px;
+    gap: 35px;
+
+}
+
+.black-line {
+    width: 100%;
+    height: 5px;
+    background: rgba(0, 0, 0, 0.5);
+    margin-top: 37px;
+    border-radius: 10px;
+    transform: matrix(1, 0, 0, -1, 0, 0);
+}
+
+
+.footer-app {
+    display: flex;
+    padding-left: 25px;
+    padding-top: 35px;
+    font-size: 24px;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: flex-start;
+
+}
+
+.footer-text {
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    vertical-align: text-top;
+    padding-left: 35px;
+
+
 }
