--- a/assets/sass/utilities/_variables.scss
+++ b/assets/sass/utilities/_variables.scss
@@ -4,6 +4,7 @@ $success-color: #28a745;
 $info-color: #17a2b8;
 $warning-color: #ffc107;
 $danger-color: #dc3545;
+$extra1-color :rgb(99, 99, 194);
 $light-color: #f8f9fa;
 $dark-color: #343a40;
 $white-color: #fff;
