--- a/assets/css/main2.css
+++ b/assets/css/main2.css
@@ -6,6 +6,16 @@ html {
   overflow-x: hidden;
 }
 
+.header {
+  background-image: url(../../assets/images/background_nba.png);
+  background-position: center top;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 100vh;
+  width: 100%;
+  position: relative;
+}
+
 ul,
 ol {
   margin-bottom: 20px;
@@ -24,25 +34,21 @@ ol {
   height: 65px;
 }
 
-/* img.logo {
-    width: 100px;
-    height: 100px;
-    //diminuer la taille de l'image
-} */
 @media (max-width: 700px) {
-  img.logo {
+  .logo {
     width: 50px;
     height: 50px;
   }
+  .header {
+    background-image: url(../../assets/images/background_nba.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 100vh;
+    width: 100%;
+    position: relative;
+  }
 }
-.header {
-  min-height: 100vh;
-  width: 100%;
-  background-position: center;
-  background-size: cover;
-  position: relative;
-}
-
 @font-face {
   font-family: "Arial Bold Italic";
   src: url("fonts/ARIALBI.TTF") format("truetype");
@@ -223,33 +229,7 @@ nav {
   padding: 0% 10%;
   justify-content: space-between;
   align-items: center;
-  border-bottom: 1px solid rgba(225, 218, 218, 0.775);
-}
-
-.navv {
-  display: flex;
-  padding: 2% 6%;
-  align-items: center;
-  justify-content: flex-start;
-  justify-content: space-between;
-}
-
-.navv-link {
-  flex: 1;
-  text-align: right;
-}
-
-.navv-link ul li {
-  list-style: none;
-  display: inline-block;
-  padding: 8px 12px;
-  position: relative;
-}
-
-.navv-link ul li a {
-  text-decoration: none;
-  color: #000;
-  font-size: 13px;
+  border-bottom: 1px solid rgba(118, 110, 110, 0.775);
 }
 
 .nav-link {
@@ -362,12 +342,13 @@ nav .fas {
     position: absolute;
     top: -200%;
     right: 0;
-    background: #fff;
+    background: rgba(255, 255, 255, 0.073);
     width: 200px;
     text-align: left;
     padding: 10px 0;
-    transition: 0.5s;
-    transform: translateY(24%);
+    z-index: 2;
+    transition: 1s;
+    transform: translateY(23%);
   }
   .nav-user ul li a {
     display: block;
@@ -382,6 +363,57 @@ nav .fas {
   }
   .fa-user {
     display: none;
+  }
+}
+.slider {
+  width: 600px;
+  overflow: hidden;
+  margin: 10px auto;
+}
+
+.slides {
+  width: 1500px;
+  animation: glisse 10s infinite;
+}
+
+.slide {
+  float: left;
+}
+
+@keyframes glisse {
+  0% {
+    transform: translateX(0);
+  }
+  33% {
+    transform: translateX(-600px);
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
+@media (max-width: 700px) {
+  .slider {
+    width: 300px;
+    overflow: hidden;
+    margin: 10px auto;
+  }
+  .slides {
+    animation: glisse 5s infinite;
+  }
+  .slides img {
+    width: 300px;
+    height: 300px;
+  }
+  @keyframes glisse {
+    0% {
+      transform: translateX(0);
+    }
+    33% {
+      transform: translateX(-300px);
+    }
+    100% {
+      transform: translateX(0);
+    }
   }
 }
 button {
@@ -472,6 +504,129 @@ a {
 .menu-link {
   color: #fff;
   text-decoration: none;
+}
+
+.text-box {
+  color: white;
+  position: absolute;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.text-box h1 {
+  font-size: 40px;
+  font-weight: 700;
+  text-transform: uppercase;
+  letter-spacing: 5px;
+  margin-bottom: 20px;
+  display: flex;
+  justify-content: center;
+  opacity: 0;
+  animation: reveal2 1s forwards 0.5s;
+}
+
+.text-box span {
+  display: flex;
+  justify-content: center;
+  opacity: 0;
+  animation: reveal 1s forwards 0.5s;
+}
+
+@keyframes reveal {
+  from {
+    translate: 0 100%;
+  }
+  to {
+    translate: none;
+    opacity: 1;
+  }
+}
+@keyframes reveal2 {
+  from {
+    translate: 0 100%;
+  }
+  to {
+    translate: none;
+    opacity: 1;
+  }
+}
+@media (max-width: 700px) {
+  .text-box {
+    color: white;
+    position: absolute;
+    top: 70%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 50px;
+  }
+  .text-box h1 {
+    font-size: 40px;
+    font-weight: 700;
+    text-transform: uppercase;
+    letter-spacing: 5px;
+    margin-bottom: 20px;
+    display: flex;
+    justify-content: center;
+  }
+  .text-box span {
+    display: flex;
+    justify-content: center;
+    opacity: 0;
+    animation: reveal 1s forwards 0.5s;
+    font-size: 14px;
+  }
+}
+/* for section1 */
+.section1 {
+  width: 80%;
+  margin: auto;
+  text-align: center;
+  padding-top: 100px;
+}
+
+h1 {
+  font-size: 36px;
+  font-weight: 600;
+}
+
+p {
+  color: gray;
+  font-size: 13px;
+  font-weight: 300;
+  line-height: 20px;
+  padding: 10px;
+}
+
+.row {
+  margin-top: 5%;
+  display: flex;
+  justify-content: space-between;
+}
+
+.section1-col {
+  flex-basis: 31%;
+  background: #fff3f3;
+  border-radius: 10px;
+  margin-bottom: 5%;
+  padding: 20px 12px;
+  box-sizing: border-box;
+  transition: 0.5s;
+}
+
+h3 {
+  text-align: center;
+  font-weight: 600;
+  margin: 10px 0;
+}
+
+.section1-col:hover {
+  box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.2);
+}
+
+@media (max-width: 700px) {
+  .row {
+    flex-direction: column;
+  }
 }
 
 /*# sourceMappingURL=main2.css.map */
