--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -585,6 +585,13 @@ h3 {
   box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.2);
 }
 
+.section1 img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 10px;
+}
+
 @media (max-width: 700px) {
   .row {
     flex-direction: column;
