add main.css to .gitIgnore

--- a/assets/sass/layout/_footer.scss
+++ b/assets/sass/layout/_footer.scss
@@ -79,3 +79,13 @@
 
 
 }
+
+.footer-section{
+    //stick the footer to the bottom of the page
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    
+    
+    
+}
