--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -566,7 +566,7 @@ p {
 }
 
 .section1-col {
-  flex-basis: 31%;
+  flex-basis: 40%;
   background: #fff3f3;
   border-radius: 10px;
   margin-bottom: 5%;
@@ -586,10 +586,15 @@ h3 {
 }
 
 .section1 img {
-  width: 100%;
-  height: 100%;
+  width: 50%;
   object-fit: cover;
-  border-radius: 10px;
+  margin-left: -230px;
+  margin-top: -100px;
+}
+
+.section1 h3 {
+  margin-top: -60px;
+  margin-left: 100px;
 }
 
 @media (max-width: 700px) {
