--- a/assets/sass/components/_section1.scss
+++ b/assets/sass/components/_section1.scss
@@ -27,7 +27,7 @@ p {
 }
 
 .section1-col {
-    flex-basis: 31%;
+    flex-basis: 40%;
     background: #fff3f3;
     border-radius: 10px;
     margin-bottom: 5%;
@@ -47,10 +47,17 @@ h3 {
 }
 
 .section1 img {
-    width: 100%;
-    height: 100%;
+    width: 50%;
     object-fit: cover;
-    border-radius: 10px;
+    //décaler l'image à gauche
+    margin-left: -230px;
+    margin-top: -100px;
+}
+
+.section1 h3 {
+    //décaler le titre en haut
+    margin-top: -60px;
+    margin-left: 100px;
 }
 
 @media(max-width:700px) {
