--- a/assets/sass/layout/_navbar.scss
+++ b/assets/sass/layout/_navbar.scss
@@ -69,6 +69,10 @@
             }
             .nav-link ul li {
                 display: block;
+                color: #fff;
+            }
+            .nav-link ul li a {
+                color: #fff;
             }
             .nav-link {
                 position: absolute;
@@ -83,14 +87,14 @@
             }
             nav .fas {
                 display: block;
-                color: #000;
+                color: #fff;
                 margin: 10px;
                 font-size: 22px;
                 cursor: pointer;
             }
             .fa-bars {
                 display: block;
-                color: #000;
+                color: #fff;
                 margin: 10px;
                 font-size: 22px;
                 cursor: pointer;
@@ -109,6 +113,7 @@
                 //il faut le centrer
                 left: 50%;
                 cursor: pointer;
+                color: #fff;
             }
             .nav-user ul li {
                 display: block;
@@ -133,7 +138,7 @@
             .nav-user ul li a {
                 display: block;
                 padding: 10px 20px;
-                color: #000;
+                color: #fff;
                 text-decoration: none;
             }
         }
