--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -91,7 +91,7 @@ a {
 }
 
 .footer {
-  position: absolute;
+  position: sticky;
   z-index: 0;
   bottom: 0;
   width: 100%;
@@ -102,7 +102,6 @@ a {
   padding-right: 145px;
   padding-top: 71px;
   box-sizing: border-box;
-  overflow: hidden;
 }
 
 .footer-menu {
@@ -172,21 +171,17 @@ a {
   font-size: 14px;
 }
 
-.footer-section {
-  position: relative;
-  bottom: 0;
-  width: 100%;
-  z-index: 1;
-  margin-top: 350px;
+.app-button {
+  padding-left: 133px;
 }
 
-@media only screen and (max-width: 800px) {
+@media only screen and (max-width: 850px) {
   .footer-contact {
     flex-direction: column;
     align-items: center;
     text-align: center;
     padding-right: 15px;
-    padding-top: 25px;
+    padding-top: 5px;
   }
   .footer-app {
     flex-direction: column;
@@ -206,7 +201,7 @@ a {
     transform: matrix(1, 0, 0, 1, 0, -15);
   }
   .footer-text span {
-    font-size: 18px;
+    font-size: 12px;
   }
   .footer-text {
     padding-left: 0;
@@ -215,15 +210,89 @@ a {
     justify-content: center;
     align-items: center;
   }
+  .app-button {
+    justify-content: center;
+    align-items: center;
+    padding-left: 0px;
+    margin-top: 10px;
+  }
   .footer {
     padding-left: 25px;
     padding-right: 25px;
-    padding-top: 20px;
+    padding-top: 0px;
   }
 }
 @media only screen and (max-width: 900px) {
   .footer-text span {
+    font-size: 15px;
+  }
+  .footer {
+    padding-top: 0px !important;
+  }
+}
+@media only screen and (max-width: 1331px) {
+  .footer {
+    padding-top: 30px;
+  }
+  .footer-text {
     font-size: 18px;
+  }
+  .app-button {
+    transform: matrix(1, 0, 0, 1, 0, -15);
+  }
+}
+@media only screen and (max-width: 585px) {
+  .footer-contact {
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    padding-right: 15px;
+    padding-top: 0px;
+  }
+  .footer-app {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding-top: 20px;
+    padding-right: 20px;
+  }
+  #footer-logo {
+    transform: matrix(1, 0, 0, 1, 0, -15);
+  }
+  .black-line {
+    transform: matrix(1, 0, 0, -1, 0, -15);
+  }
+  .contact-buttons {
+    gap: 5px;
+    transform: matrix(1, 0, 0, 1, 0, -15);
+  }
+  .footer-text span {
+    font-size: 12px;
+  }
+  #subText {
+    font-size: 9px;
+  }
+  .footer-text {
+    padding-left: 0;
+    padding-top: 0px;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+  }
+  .app-button {
+    justify-content: center;
+    align-items: center;
+    padding-left: 0px;
+    margin-top: 10px;
+  }
+  .app-button img {
+    width: 70px;
+    height: 25px;
+  }
+  .footer {
+    padding-left: 25px;
+    padding-right: 25px;
+    padding-top: 0px;
   }
 }
 .col-1 {
