--- a/assets/sass/base/_base.scss
+++ b/assets/sass/base/_base.scss
@@ -8,8 +8,8 @@
                             
                             //remplie toute la section header avec l'image
                             .header {
-                                background-image: url(../../assets/images/background_nba.png);
-                                //background-image: linear-gradient(rgba(30, 5, 4, 0.7), rgba(30, 4, 4, 0.7)), url(../../assets/images/background.jpeg);
+                                //background-image: url(../../assets/images/background_nba.png);
+                                background-image: linear-gradient(rgba(0, 0, 0, 0.397), rgba(30, 4, 4, 0.7)), url(../../assets/images/background_nba.png);
                                 background-position: center top;
                                 background-repeat: no-repeat;
                                 background-size: cover;
