--- a/assets/sass/layout/_navbar.scss
+++ b/assets/sass/layout/_navbar.scss
@@ -25,7 +25,7 @@
         
         .nav-link ul li a {
             text-decoration: none;
-            color: #000;
+            color: #fff;
             font-size: 13px;
         }
         
@@ -41,7 +41,7 @@
             content: "";
             width: 0%;
             height: 2px;
-            background: #000;
+            background: #fff;
             display: block;
             margin: auto;
             transition: 0.5s;
