--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -96,12 +96,13 @@ a {
   bottom: 0;
   width: 100%;
   height: 350px;
-  background-color: #A6A6A6;
-  color: #000000;
+  background-color: #1f1f1f;
+  color: #fff;
   padding-left: 145px;
   padding-right: 145px;
   padding-top: 71px;
   box-sizing: border-box;
+  overflow: hidden;
 }
 
 .footer-menu {
