--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -19,4 +19,5 @@
 @import './components/links';
 @import './components/menu';
 @import './components/text_box';
-@import './components/_section1';
+@import './components/section1';
+@import'./components/image_map';
