add new section

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -20,4 +20,5 @@
 @import './components/menu';
 @import './components/text_box';
 @import './components/section1';
+@import './components/section2';
 @import'./components/image_map';
