--- a/assets/sass/components/_section2.scss
+++ b/assets/sass/components/_section2.scss
@@ -1,10 +1,15 @@
 /* section2 */
 
 .section2 {
-    width: 80%;
+    width: 70%;
     margin: auto;
     text-align: center;
     padding-top: 50px;
+}
+
+.section2 p {
+    //réduit la taille du texte
+    font-size: 15px;
 }
 
 .section2-col {
@@ -17,7 +22,7 @@
 
 img.img-section2 {
     width: 100%;
-    height: 600px;
+    height: 100%;
     display: block;
 }
 
