--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 body,
 html {
   margin: 0;
@@ -872,6 +873,11 @@ img.img-section2 {
   opacity: 1;
 }
 
+@media (max-width: 700px) {
+  .section2 {
+    padding-top: 300px;
+  }
+}
 .image_map {
   width: 75%;
   margin: auto;
@@ -911,17 +917,27 @@ img.img-section2 {
     margin: auto;
   }
   .map_call {
-    position: absolute;
+    display: none;
+    /*  position: absolute;
     margin-top: -380px;
+    // margin-bottom: 100px; //width: 50%;
+    //décale à droite 
     margin-left: 0%;
+    //height: 50%;
     border-radius: 10px;
+    //rajoute un fond blanc avec un padding
     background: rgba(255, 255, 255, 0.999);
     padding: 10px 10px;
-    margin-top: 0px;
+    //faire descendre la classe
+    margin-top: 0px; */
   }
   .map_call h1 {
     font-size: 15px;
     font-weight: 600;
+  }
+  .map_call iframe {
+    width: 100%;
+    height: 100%;
   }
 }
 
