Creating products page

--- a/assets/sass/base/_base.scss
+++ b/assets/sass/base/_base.scss
@@ -18,6 +18,15 @@
                                 position: relative;
                                 //pour que l'image ne soit pas mal placé sur un grand écran
                             }
+
+                            .header_product ul li a{
+                                
+                                color: #0000;
+                            }
+
+                            .header_product{
+
+                            }
                             
                             ul,
                             ol {
