--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -21,3 +21,4 @@
 @import './components/text_box';
 @import './components/section1';
 @import'./components/image_map';
+@import'./components/products';
