--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -16,6 +16,10 @@ html {
   position: relative;
 }
 
+.header_product ul li a {
+  color: rgba(0, 0, 0, 0);
+}
+
 ul,
 ol {
   margin-bottom: 20px;
@@ -865,6 +869,29 @@ h3 {
     font-size: 15px;
     font-weight: 600;
   }
+}
+.body-bg-products {
+  background: rgb(59, 173, 179);
+  background: linear-gradient(90deg, rgba(41, 133, 138, 0.7) 0%, rgb(123, 93, 53) 35%, rgb(136, 59, 108) 100%);
+}
+
+.sideBar-product {
+  background: #D9D9D9;
+  width: 350px;
+  height: 750px;
+}
+
+#sideBar-logo {
+  position: absolute;
+  left: 3.42%;
+  right: -49.25%;
+  top: 14.64%;
+  bottom: 23.77%;
+  background: #FFCC00;
+  box-shadow: inset 0px 4px 4px rgba(0, 0, 0, 0.25);
+  transform: rotate(35.66deg);
+  height: 510.42;
+  width: 445.9;
 }
 
 /*# sourceMappingURL=main.css.map */
