--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -504,13 +504,12 @@ nav .fas {
   }
 }
 .slider {
-  width: 600px;
   overflow: hidden;
   margin: 10px auto;
 }
 
 .slides {
-  width: 1500px;
+  width: 2700px;
   animation: glisse 10s infinite;
 }
 
@@ -918,7 +917,7 @@ img.img-section2 {
   }
   .map_call {
     display: none;
-    /*  position: absolute;
+    /* position: absolute;
     margin-top: -380px;
     // margin-bottom: 100px; //width: 50%;
     //décale à droite 
@@ -936,8 +935,8 @@ img.img-section2 {
     font-weight: 600;
   }
   .map_call iframe {
-    width: 100%;
-    height: 100%;
+    width: 300;
+    height: 300;
   }
 }
 
