--- a/assets/sass/components/_slider.scss
+++ b/assets/sass/components/_slider.scss
@@ -28,11 +28,12 @@
 @media(max-width:700px) {
     .slider {
         //divise la taille de l'image par 2
-        width: 300px;
+        // width: 300px;
         overflow: hidden;
         margin: 10px auto;
     }
     .slides {
+        //width: calc(600px * 3);
         animation: glisse 5s infinite;
     }
     .slides img {
@@ -44,7 +45,7 @@
             transform: translateX(0);
         }
         33% {
-            transform: translateX(-300px);
+            transform: translateX(-600px);
         }
         100% {
             transform: translateX(0);
