fixed map responsive

--- a/assets/sass/components/_image_map.scss
+++ b/assets/sass/components/_image_map.scss
@@ -44,8 +44,8 @@
         }
         .map_call {
             //le mettre au dessus de l'image
-            display: none;
-            /* position: absolute;
+            //display: none;
+            position: absolute;
             margin-top: -380px;
             // margin-bottom: 100px; //width: 50%;
             //décale à droite 
@@ -56,15 +56,15 @@
             background: rgba(255, 255, 255, 0.999);
             padding: 10px 10px;
             //faire descendre la classe
-            margin-top: 0px; */
+            margin-top: 0px;
         }
         .map_call h1 {
             font-size: 15px;
             font-weight: 600;
         }
-        .map_call iframe {
-            width: 300;
-            height: 300;
+        iframe {
+            width: 375px;
+            height: 200px;
         }
     }
     
