--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 body,
 html {
   margin: 0;
@@ -915,27 +914,21 @@ img.img-section2 {
     margin: auto;
   }
   .map_call {
-    display: none;
-    /* position: absolute;
+    position: absolute;
     margin-top: -380px;
-    // margin-bottom: 100px; //width: 50%;
-    //décale à droite 
     margin-left: 0%;
-    //height: 50%;
     border-radius: 10px;
-    //rajoute un fond blanc avec un padding
     background: rgba(255, 255, 255, 0.999);
     padding: 10px 10px;
-    //faire descendre la classe
-    margin-top: 0px; */
+    margin-top: 0px;
   }
   .map_call h1 {
     font-size: 15px;
     font-weight: 600;
   }
-  .map_call iframe {
-    width: 300;
-    height: 300;
+  iframe {
+    width: 375px;
+    height: 200px;
   }
 }
 
