--- a/assets/sass/components/_section1.scss
+++ b/assets/sass/components/_section1.scss
@@ -101,6 +101,7 @@
         }
     }
     
+    //animation
     .section1 .row .section1-col {
         opacity: 0;
         transform: translateX(-100%);
