--- a/assets/sass/base/_base.scss
+++ b/assets/sass/base/_base.scss
@@ -45,7 +45,7 @@
                                     height: 50px;
                                 }
                                 .header {
-                                    background-image: url(../../assets/images/background_nba.png);
+                                    background-image: linear-gradient(rgba(0, 0, 0, 0.397), rgba(30, 4, 4, 0.7)), url(../../assets/images/background_nba.png);
                                     //background-image: linear-gradient(rgba(30, 5, 4, 0.7), rgba(30, 4, 4, 0.7)), url(../../assets/images/background.jpeg);
                                     background-position: center;
                                     background-repeat: no-repeat;
