--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -23,3 +23,4 @@
 @import'./components/image_map';
 @import'./components/products';
 @import './components/section2';
+@import './components/side_bar';
