--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -22,3 +22,4 @@
 @import './components/section1';
 @import './components/section2';
 @import'./components/image_map';
+@import './components/order_map';
