--- a/assets/sass/components/_forms.scss
+++ b/assets/sass/components/_forms.scss
@@ -1,29 +1,56 @@
-.form-connexion {
-    background-color: transparent;
-    border-radius: 5px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    padding: 30px;
-    width: 100%;
-    max-width: 400px;
-    margin: 0 auto;
-    margin-top: 50px;
-    margin-bottom: 50px;
-}
-
-//centrer form-connexion-logo
-.form-connexion-logo {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-bottom: 30px;
-}
-
-.form-connexion-header {
-    text-align: center;
-    margin-bottom: 30px;
-}
-
-.form-connexion-body {
-    //espacement entre les inputs
-    margin-bottom: 20px;
-}
+        .form-connexion {
+            background-color: rgb(108, 33, 33);
+            border-radius: 5px;
+            box-shadow: 0 0 10px rgba(156, 30, 30, 0.1);
+            padding: 30px;
+            width: 100%;
+            max-width: 400px;
+            margin: 0 auto;
+            margin-top: 50px;
+            margin-bottom: 50px;
+        }
+        
+        //centrer form-connexion-logo
+        .form-connexion-logo {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin-bottom: 30px;
+        }
+        
+        .form-connexion-header {
+            text-align: center;
+            margin-bottom: 30px;
+        }
+        
+        .form-connexion-header h1 {
+            font-size: 30px;
+            margin-bottom: 10px;
+            color: white;
+        }
+        
+        .form-connexion-body {
+            //espacement entre les inputs
+            margin-bottom: 20px;
+            //centrer les inputs
+            display: flex;
+            flex-direction: column;
+        }
+        
+        .form-connexion-input {
+            width: 100%;
+            padding: 10px;
+            border-radius: 5px;
+            box-sizing: border-box;
+            margin-bottom: 5px;
+            text-align: center;
+        }
+        
+        .form-connexion-input-submit {
+            width: 100%;
+            padding: 10px;
+            border-radius: 5px;
+            box-sizing: border-box;
+            margin-bottom: 5px;
+            text-align: center;
+        }
