--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -660,11 +660,13 @@ button:active {
 
 .form-connexion-input {
   width: 100%;
+  height: 50px;
   padding: 10px;
-  border-radius: 5px;
+  border-radius: 10px;
   box-sizing: border-box;
   margin-bottom: 5px;
   text-align: center;
+  font-size: 20px;
 }
 
 .form-connexion-input-submit {
